# IdRec

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/idrec/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
